# taskflow-v4

./: .env.example  .gitignore  README.md  ai_review.py  backup.sh  bookmark.py  bot.py  compile.js  config.py  datehelper.py  eisenhower.py  feature-notes-backlinking.md  fix_list_tasks.py  habit_templates_curated.json  habits_tasks_1000.json  install-web.sh  install.sh  jotask.service  mailer.py  merge_db.py  models.py  new-feature-habit-tracker-telegram-bot.md  new-feature-scratchpad.md  nginx-jotask.conf  nginx-taskflow.conf  nlp.py  package-lock.json  package.json  patch_app_check_expiry.py  patch_app_expiry_banner.py  patch_app_expiry_state.py  patch_calendar_byDay.py  patch_calendar_effect.py  patch_calendar_popup.py  patch_calendar_state.py  patch_drawing_offline.py  patch_offline_fixes.py  patch_recurring_helper.py  patch_taskform_save.py  patch_taskform_state.py  (+18 more)
draw-app/: index.html  package-lock.json  package.json  vite.config.js
milkdown-build/: entry.js  katex-global.js  package-lock.json  package.json
scripts/: build-tauri-dist.js  gen_habit_templates.py  patch-android-share.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
static/: config.js  index.html  manifest.json  sw.js
taskflow-v4-web-addon/: install-web.sh  jotask-web.service  requirements-web.txt  webapp.py
tests/: build-tauri-dist.test.js  buildReview.test.js  (+5 more)
(+231 files in other folders)
