[package]
name = "taskflow"
version = "4.0.0"
description = "TaskFlow V4 desktop app"
authors = ["yatno"]
edition = "2021"

[lib]
name = "taskflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
